<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2015 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_topic"
            android:title="@string/nav_topic" />
        <item
            android:id="@+id/nav_collect"
            android:title="@string/nav_fav" />

        <item
            android:id="@+id/nav_recommend"
            android:title="帖子推荐" />

        <item
            android:id="@+id/nav_my"
            android:title="@string/nav_my" />


        <item
            android:id="@+id/nav_nba"
            android:title="@string/nav_nba" />
        <item
            android:id="@+id/nav_gambia"
            android:title="@string/nav_gambia" />
        <item
            android:id="@+id/nav_cba"
            android:title="@string/nav_cba" />
        <item
            android:id="@+id/nav_equipment"
            android:title="@string/nav_equipment" />

        <item
            android:id="@+id/nav_intel_football"
            android:title="国际足球论坛" />
        <item
            android:id="@+id/nav_football"
            android:title="国内足球论坛" />
        <item
            android:id="@+id/nav_fitness"
            android:title="@string/nav_fitness" />
        <item
            android:id="@+id/nav_sport"
            android:title="@string/nav_sport" />


    </group>

    <item android:title="其他">
        <menu>
            <item
                android:id="@+id/nav_setting"
                android:title="设置" />
            <item
                android:id="@+id/nav_feedback"
                android:title="反馈" />
            <item
                android:id="@+id/nav_about"
                android:title="关于" />
        </menu>
    </item>

</menu>
