<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white">

    <LinearLayout
        android:id="@+id/picker_bg"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginBottom="40.0dip"
        android:background="#99000000"
        android:orientation="vertical" />


    <RelativeLayout
        android:id="@+id/picker_container"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom">

        <View
            android:id="@+id/picker_top_border"
            android:layout_width="fill_parent"
            android:layout_height="1.0dip"
            android:layout_alignParentTop="true"
            android:background="#e5e5e5" />

        <RelativeLayout
            android:id="@+id/picker_opt_container"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/picker_top_border"
            android:background="#fcfcfc"
            android:gravity="center_vertical"
            android:paddingBottom="4.0dip"
            android:paddingTop="4.0dip">

            <Button
                android:id="@+id/btCancel"
                android:layout_width="48.0dip"
                android:layout_height="30.0dip"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="10.0dip"
                android:background="@drawable/red_btn"
                android:gravity="center"
                android:text="@string/picker_cancel"
                android:textColor="#ffffffff"
                android:textSize="15.0sp" />

            <Button
                android:id="@+id/btFirst"
                android:layout_width="48.0dip"
                android:layout_height="30.0dip"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@+id/btCancel"
                android:background="@drawable/purple_btn"
                android:text="@string/picker_first"
                android:textColor="#ffffffff"
                android:textSize="15.0sp" />

            <Button
                android:id="@+id/btLast"
                android:layout_width="48.0dip"
                android:layout_height="30.0dip"
                android:layout_centerHorizontal="true"
                android:layout_marginRight="20dp"
                android:layout_toLeftOf="@+id/btJump"
                android:background="@drawable/purple_btn"
                android:text="@string/picker_end"
                android:textColor="#ffffffff"
                android:textSize="15.0sp" />

            <Button
                android:id="@+id/btJump"
                android:layout_width="48.0dip"
                android:layout_height="30.0dip"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10.0dip"
                android:background="@drawable/real_blue_btn"
                android:gravity="center"
                android:text="@string/picker_jump"
                android:textColor="#ffffffff"
                android:textSize="15.0sp" />
        </RelativeLayout>

        <View
            android:id="@+id/picker_bottom_border"
            android:layout_width="fill_parent"
            android:layout_height="1.0dip"
            android:layout_below="@+id/picker_opt_container"
            android:background="#e5e5e5" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/picker_bottom_border"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <com.gzsll.hupu.widget.NumberPicker
                android:id="@+id/picker"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#fcfcfc" />

        </LinearLayout>

    </RelativeLayout>
</FrameLayout>
